<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.bangotti_countbook.EditCurrentItem"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <EditText
        android:id="@+id/nameItem"
        android:layout_width="331dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="@string/name_help"
        android:inputType="textPersonName"
        android:layout_marginTop="26dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.509" />

    <EditText
        android:id="@+id/currentValue"
        android:layout_width="207dp"
        android:layout_height="43dp"
        android:layout_marginTop="18dp"
        android:ems="10"
        android:hint="@string/current_help"
        android:inputType="number"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/initialValue"
        app:layout_constraintHorizontal_bias="0.827" />

    <EditText
        android:id="@+id/initialValue"
        android:layout_width="205dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="@string/initial_help"
        android:inputType="number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/dateView"
        app:layout_constraintHorizontal_bias="0.828" />

    <EditText
        android:id="@+id/commentValue"
        android:layout_width="334dp"
        android:layout_height="86dp"
        android:ems="10"
        android:hint="@string/Comment_str"
        android:inputType="textMultiLine"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/currentValue" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/holo_orange_light"
        android:onClick="resetCurrentValue"
        android:text="@string/reset_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentValue"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintRight_toLeftOf="@+id/saveButton"
        app:layout_constraintLeft_toRightOf="@+id/deleteButton" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@android:color/holo_blue_bright"
        android:onClick="saveAllEdits"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/resetButton" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:onClick="deleteFromList"
        android:text="@string/delete_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/resetButton"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/dateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="date"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameItem" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:onClick="addItem"
        android:text="@string/add_one_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/subtractButton"
        app:layout_constraintTop_toBottomOf="@+id/commentValue" />

    <Button
        android:id="@+id/subtractButton"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginTop="18dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:onClick="subtractItem"
        android:text="@string/subtract_one_button"
        app:layout_constraintLeft_toRightOf="@+id/addButton"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/commentValue" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/current_help"
        android:textSize="18sp"
        app:layout_constraintRight_toLeftOf="@+id/currentValue"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.307"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/initial_help"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/initialValue"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="147dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />
</android.support.constraint.ConstraintLayout>
